fix(#12): form overflow mobile

--- a/src/ui-kit/form/form.module.css
+++ b/src/ui-kit/form/form.module.css
@@ -19,7 +19,6 @@
   font: var(--p-medium-500);
   color: var(--dark-blue);
   grid-template-columns: repeat(2, auto);
-  min-width: 324px;
 }
 
 .fieldset {
